[tool.poetry]
name = "forest"
version = "0.1.0"
description = ""
authors = ["alensign <alexandra.wilchitskaya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
sklearn = "^0.0"
mlflow = "^2.2.1"
pandas-profiling = "^3.2.0"
Boruta = "^0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
mypy = "^0.950"
flake8 = "^4.0.1"

[tool.poetry.scripts]
train = "forest.train:train"
profile = "forest.profiling:profile_report"
train_nested_cv = "forest.train_nested_cv:train_nested_cv"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
